--- a/spring-boot-examples/workflows/multi-app/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.dapr</groupId>
     <artifactId>workflows</artifactId>
     <version>1.17.0-SNAPSHOT</version>
-    <relativePath>../../pom.xml</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>multi-app</artifactId>
