--- a/spring-boot-examples/workflows/patterns/pom.xml
+++ b/spring-boot-examples/workflows/patterns/pom.xml
@@ -47,6 +47,12 @@
       <artifactId>microcks-testcontainers</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers-postgresql</artifactId>
+      <version>2.0.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
